# serializer version: 1
# name: test_read_csv[Fields [0]]
  list([
    'COL',
    'D',
    'GAS',
    'NG',
    'TI',
    'WND',
    'OTH',
    'WAT',
    'SUN',
    'NUC',
    'OIL',
    'ID',
  ])
# ---
# name: test_read_csv[Fields [1]]
  list([
    'COL',
    'D',
    'GAS',
    'NG',
    'TI',
    'WND',
    'OTH',
    'SUN',
    'WAT',
    'NUC',
    'OIL',
    'ID',
  ])
# ---
# name: test_read_csv[Link fields [0]]
  list([
    'ID',
  ])
# ---
# name: test_read_csv[Link fields [1]]
  list([
    'ID',
  ])
# ---
# name: test_read_csv[Number of regions [0]]
  72
# ---
# name: test_read_csv[Number of regions [1]]
  70
# ---
# name: test_read_csv[Region fields [0]]
  list([
    'COL',
    'D',
    'GAS',
    'NG',
    'TI',
    'WND',
    'OTH',
    'WAT',
    'SUN',
    'NUC',
    'OIL',
  ])
# ---
# name: test_read_csv[Region fields [1]]
  list([
    'COL',
    'D',
    'GAS',
    'NG',
    'TI',
    'WND',
    'OTH',
    'SUN',
    'WAT',
    'NUC',
    'OIL',
  ])
# ---
# name: test_read_csv[Regions [0]]
  list([
    'AEC',
    'MISO',
    'SOCO',
    'AECI',
    'SPA',
    'SWPP',
    'TVA',
    'AVA',
    'BPAT',
    'CHPD',
    'GCPD',
    'IPCO',
    'NWMT',
    'PACW',
    'AVRN',
    'AZPS',
    'CISO',
    'IID',
    'LDWP',
    'PACE',
    'PNM',
    'SRP',
    'TEPC',
    'WACM',
    'WALC',
    'BANC',
    'TIDC',
    'BCHA',
    'DOPD',
    'GRID',
    'NEVP',
    'PGE',
    'PSEI',
    'SCL',
    'TPWR',
    'CEN',
    'CPLE',
    'DUK',
    'PJM',
    'SCEG',
    'SC',
    'YAD',
    'CPLW',
    'DEAA',
    'SEPA',
    'EPE',
    'ERCO',
    'FMPP',
    'FPC',
    'FPL',
    'JEA',
    'TEC',
    'GVL',
    'SEC',
    'TAL',
    'HST',
    'GRIF',
    'GWA',
    'HGMA',
    'ISNE',
    'HQT',
    'NBSO',
    'NYIS',
    'LGEE',
    'GLHB',
    'IESO',
    'MHEB',
    'AESO',
    'WAUW',
    'WWA',
    'PSCO',
    'SPC',
  ])
# ---
# name: test_read_csv[Regions [1]]
  list([
    'AECI',
    'MISO',
    'SPA',
    'SWPP',
    'TVA',
    'AVA',
    'BPAT',
    'CHPD',
    'GCPD',
    'IPCO',
    'NWMT',
    'PACW',
    'AVRN',
    'AZPS',
    'CISO',
    'IID',
    'LDWP',
    'PACE',
    'PNM',
    'SRP',
    'TEPC',
    'WACM',
    'WALC',
    'BANC',
    'TIDC',
    'BCHA',
    'DOPD',
    'GRID',
    'NEVP',
    'PGE',
    'PSEI',
    'SCL',
    'TPWR',
    'CEN',
    'CPLE',
    'DUK',
    'PJM',
    'SCEG',
    'SC',
    'YAD',
    'CPLW',
    'DEAA',
    'SEPA',
    'SOCO',
    'EPE',
    'ERCO',
    'FMPP',
    'FPC',
    'FPL',
    'JEA',
    'TEC',
    'GVL',
    'SEC',
    'TAL',
    'HST',
    'GRIF',
    'GWA',
    'HGMA',
    'ISNE',
    'HQT',
    'NBSO',
    'NYIS',
    'LGEE',
    'IESO',
    'MHEB',
    'AESO',
    'WAUW',
    'WWA',
    'PSCO',
    'SPC',
  ])
# ---
